# STM32-CMake-CodeSourcery

./: .gitignore  CMakeLists.txt  README.md
CMake/: STM32.cmake  Toolchain-STM32-CodeSourcery.cmake
CMake/Modules/: FindCMSIS.cmake  FindSTLinkUtility.cmake  FindSTM32F4xx.cmake  FindStdPeriph.cmake
src/: main.c  stm32f4_discovery.h
